<resources>
    <!--Menu Names-->
    <string name="app_name">StatText</string>
    <string name="menu_home">Home</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_summary">Summary</string>
    <string name="menu_messages">Messages</string>

    <!--Toolbar menu titles-->
    <string name="toolbar_menu_refresh">Refresh</string>
    <string name="toolbar_menu_darkmode">DarkMode</string>
    <string name="toolbar_menu_permissions">Permissions</string>

    <!--Graph Labels-->
    <string name="tab_day">Day</string>
    <string name="tab_week">Week</string>
    <string name="tab_month">Month</string>

    <!--Content Descriptions-->
    <string name="fab_contacts">Add Contacts</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Endeavor</string>
    <string name="nav_header_subtitle">App displays popular recipes with instructions</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>