<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_paths"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.affinityapps.stattext.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/date_statistics_transfer"
            app:destination="@+id/fragment_statistics" />
        <action
            android:id="@+id/date_summary_transfer"
            app:destination="@+id/fragment_summary" />
        <action
            android:id="@+id/date_messages_transfer"
            app:destination="@+id/fragment_messages" />

        <action
            android:id="@+id/message_statistics_transfer"
            app:destination="@+id/fragment_statistics" />
        <action
            android:id="@+id/message_summary_transfer"
            app:destination="@+id/fragment_summary" />
        <action
            android:id="@+id/message_messages_transfer"
            app:destination="@+id/fragment_messages" />
    </fragment>

    <fragment
        android:id="@+id/fragment_statistics"
        android:name="com.affinityapps.stattext.graphs.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics">
        <argument
            android:name="DateStatistics"
            app:argType="string" />
        <argument
            android:name="MessageStatistics"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/fragment_summary"
        android:name="com.affinityapps.stattext.summary.SummaryFragment"
        android:label="@string/menu_summary"
        tools:layout="@layout/fragment_summary">
        <argument
            android:name="DateSummary"
            app:argType="string" />
        <argument
            android:name="MessageSummary"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/fragment_messages"
        android:name="com.affinityapps.stattext.messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages">
        <argument
            android:name="DateMessages"
            app:argType="string" />
        <argument
            android:name="MessageMessages"
            app:argType="string" />
    </fragment>

</navigation>